
cmake_minimum_required (VERSION 3.8)

project ("my_first_cmake_project2")

add_executable (my_first_cmake_project2 "main.cpp" "Figure/Figure.cpp" "EquilateralTriangle/EquilateralTriangle.cpp" "IsoscelesTriangle/IsoscelesTriangle.cpp" "Parallelogram/Parallelogram.cpp" "Quadrilateral/Quadrilateral.cpp" "Rectangle/Rectangle.cpp" "Rhomb/Rhomb.cpp" "RightTriangle/RightTriangle.cpp" "Square/Square.cpp" "Triangle/Triangle.cpp")

